Optimized head elements, wrapped section tags in a main element (to make sure body always covers one full viewport across all pages), and added links to terrabyte home page on header and footer logos

--- a/css/site-styles.css
+++ b/css/site-styles.css
@@ -207,6 +207,13 @@ a.standard-link{
 	display:inline-block;
 	transition: .35s;
   margin-bottom:6px;
+
+  /* manage word wrap on long URLs */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  word-break: break-word;
 }
 /* link underlines */
 a.standard-link:before,
